test GPT Structured Output Mode

--- a/scripts/summary_statistics.ipynb
+++ b/scripts/summary_statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,13 @@
     "import json\n",
     "from textwrap import dedent\n",
     "from openai import OpenAI\n",
-    "client = OpenAI()\n",
-    "MODEL = \"gpt-4o-2024-08-06\"\n",
+    "from pydantic import BaseModel\n",
+    "from typing import Optional, List\n",
+    "\n",
+    "path_to_api_key: str = \"../API_KEY.txt\"\n",
+    "my_api_key = open(path_to_api_key, 'r').read()\n",
+    "client = OpenAI(api_key=my_api_key)\n",
+    "MODEL = \"gpt-4o\" # Add Date\n",
     "\n",
     "classification_prompt = '''\n",
     "    You will be provided with a prompt that a health care worker sent to a medical AI chatbot.\n",
@@ -64,30 +69,136 @@
     "\n",
     "'''\n",
     "\n",
-    "class ArticleSummary(BaseModel):\n",
-    "    invented_year: int\n",
-    "    summary: str\n",
-    "    inventors: list[str]\n",
-    "    description: str\n",
+    "class PromptAttributes(BaseModel):\n",
+    "    gender: str = None\n",
+    "    ethnicity_nationality: str = None\n",
+    "    socioeconomic_status: str = None\n",
+    "    occupation: str = None\n",
+    "    lifestyle_smoking: str = None\n",
+    "    lifestyle_alcohol_consumption: str = None\n",
+    "    lifestyle_diet: str = None\n",
+    "    lifestyle_physical_activity: str = None\n",
+    "    chronic_conditions: str = None\n",
+    "    family_medical_history: str = None\n",
+    "    allergies: str = None\n",
+    "    recent_travel_history: str = None\n",
+    "    chief_complaint: str = None\n",
+    "    duration_and_onset: str = None\n",
+    "    pattern_of_symptoms: str = None\n",
+    "    associated_symptoms: str = None\n",
+    "    severity_of_symptoms: str = None\n",
+    "    mental_health_history: str = None\n",
+    "    stress_levels: str = None\n",
+    "    coping_mechanisms: str = None\n",
+    "    support_systems: str = None\n",
+    "    urgency_of_care_needed: str = None\n",
+    "    treatment_adherence: str = None\n",
+    "    age: int = None\n",
+    "    height: float = None\n",
+    "    weight: float = None\n",
+    "    systolic_blood_pressure: float = None\n",
+    "    diastolic_blood_pressure: float = None\n",
+    "    heart_rate: float = None\n",
+    "    respiratory_rate: float = None\n",
+    "    temperature: float = None\n",
+    "    oxygen_saturation: float = None\n",
+    "    blood_glucose_levels_mg: float = None\n",
+    "    blood_glucose_levels_mmol: float = None\n",
+    "    sodium_levels: float = None\n",
+    "    potassium_levels: float = None\n",
+    "    chloride_levels: float = None\n",
+    "    creatinine_mg: float = None\n",
+    "    creatinine_mmol: float = None\n",
+    "    blood_urea_nitrogen: float = None\n",
+    "    alt: float = None\n",
+    "    ast: float = None\n",
     "\n",
-    "    class Concept(BaseModel):\n",
-    "        title: str\n",
-    "        description: str\n",
-    "\n",
-    "    concepts: list[Concept]\n",
-    "\n",
-    "def get_article_summary(text: str):\n",
+    "def get_prompt_attributes(prompt_to_analyze: str):\n",
     "    completion = client.beta.chat.completions.parse(\n",
     "        model=MODEL,\n",
     "        temperature=0,\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": dedent(summarization_prompt)},\n",
-    "            {\"role\": \"user\", \"content\": text}\n",
+    "            {\"role\": \"system\", \"content\": dedent(classification_prompt)},\n",
+    "            {\"role\": \"user\", \"content\": prompt_to_analyze}\n",
     "        ],\n",
-    "        response_format=ArticleSummary,\n",
+    "        response_format=PromptAttributes,\n",
     "    )\n",
     "\n",
     "    return completion.choices[0].message.parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "def sample_json_entry(file_path):\n",
+    "    \"\"\"\n",
+    "    Samples one entry from a JSON file and returns the values of the 'id' and 'prompt' fields.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str): The path to the JSON file.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the 'id' and 'prompt' fields of the sampled entry.\n",
+    "    \"\"\"\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "    \n",
+    "    # Ensure the JSON is a list of entries\n",
+    "    if not isinstance(data, list):\n",
+    "        raise ValueError(\"The JSON file must contain a list of entries.\")\n",
+    "    \n",
+    "    # Sample one entry at random\n",
+    "    random_entry = random.choice(data)\n",
+    "    \n",
+    "    # Extract 'id' and 'prompt' fields\n",
+    "    return random_entry.get(\"id\"), random_entry.get(\"prompt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B-1670-1D-Philippines\n",
+      "A 10-year-old female patient in the Philippines has a history of recurrent respiratory infections and has been diagnosed with mild asthma. Her family lives in an urban area with high pollution levels. She follows a typical Filipino diet and is involved in moderate physical activities at school. Given her medical history and environmental exposure, what potential health risks should be prioritized during her assessment, and what preventive measures can be recommended?\n",
+      "Provide an expert-level explanation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "id_, prompt = sample_json_entry(\"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle.json\")\n",
+    "print(id_)\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PromptAttributes(gender='Female', ethnicity_nationality='Asian', socioeconomic_status='None', occupation='Student', lifestyle_smoking='None', lifestyle_alcohol_consumption='None', lifestyle_diet='Other', lifestyle_physical_activity='Moderately active', chronic_conditions='Asthma', family_medical_history='None', allergies='None', recent_travel_history='None', chief_complaint='None', duration_and_onset='Recurrent', pattern_of_symptoms='None', associated_symptoms='None', severity_of_symptoms='Mild', mental_health_history='None', stress_levels='None', coping_mechanisms='None', support_systems='None', urgency_of_care_needed='None', treatment_adherence='None', age=10, height=0.0, weight=0.0, systolic_blood_pressure=0.0, diastolic_blood_pressure=0.0, heart_rate=0.0, respiratory_rate=0.0, temperature=0.0, oxygen_saturation=0.0, blood_glucose_levels_mg=0.0, blood_glucose_levels_mmol=0.0, sodium_levels=0.0, potassium_levels=0.0, chloride_levels=0.0, creatinine_mg=0.0, creatinine_mmol=0.0, blood_urea_nitrogen=0.0, alt=0.0, ast=0.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_prompt_attributes(prompt)"
    ]
   }
  ],
@@ -98,7 +209,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
